<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jbpm.services.poc</groupId>
    <artifactId>rest-jms-poc</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>

  <artifactId>test-impl</artifactId>
  <packaging>war</packaging>
  <name>jBPM Services PoC :: Test Impl</name>
  <description>In order to figure out how to get a war with jbpm-services working</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <arquillian.version>1.0.3.Final</arquillian.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jbpm.services.poc</groupId>
      <artifactId>client</artifactId>
    </dependency>

    <dependency>
      <groupId>org.kie</groupId>
      <artifactId>kie-internal</artifactId>
    </dependency>
    <dependency>
      <groupId>org.jbpm</groupId>
      <artifactId>jbpm-persistence-jpa</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>dom4j</artifactId>
          <groupId>dom4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- general -->
    <dependency>
      <groupId>org.jboss.spec.javax.ejb</groupId>
      <artifactId>jboss-ejb-api_3.1_spec</artifactId>
    </dependency>
    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
    </dependency>
    <dependency>
      <groupId>javax.enterprise</groupId>
      <artifactId>cdi-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hibernate.javax.persistence</groupId>
      <artifactId>hibernate-jpa-2.0-api</artifactId>
    </dependency>

    <!-- necessary for the war to work -->
    <!-- war necessary: kie/jbpm -->
    <!-- 
    <dependency>
      <groupId>org.jbpm</groupId>
      <artifactId>jbpm-runtime-manager</artifactId>
      <exclusions>
        // causes problems with hibernate's version of dom4j on AS7 
        <exclusion>
          <artifactId>dom4j</artifactId>
          <groupId>dom4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.jbpm</groupId>
      <artifactId>jbpm-human-task-workitems</artifactId>
      <version>6.0.0-SNAPSHOT</version>
    </dependency>
    -->
    <!-- war necessary: weld/solder -->
    <!-- 
    <dependency>
      <groupId>org.jboss.solder</groupId>
      <artifactId>solder-impl</artifactId>
      <version>3.2.0.Final</version>
    </dependency>
    -->


    <!-- TEST -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- arquillian -->
    <dependency>
      <groupId>org.jboss.arquillian.junit</groupId>
      <artifactId>arquillian-junit-container</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- arquillian (web) archive creation -->
    <dependency>
      <groupId>org.jboss.shrinkwrap.descriptors</groupId>
      <artifactId>shrinkwrap-descriptors-impl-javaee</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.shrinkwrap.resolver</groupId>
      <artifactId>shrinkwrap-resolver-depchain</artifactId>
      <type>pom</type>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/webapp</directory>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1.1</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Bundle-Name>jBPM Console Services PoC</Bundle-Name>
              <Bundle-Version>${project.version}</Bundle-Version>
              <Bundle-SymbolicName>console-services</Bundle-SymbolicName>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

      <!-- testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.2</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <excludes>
            <exclude>**/*IntegrationTest.java</exclude>
          </excludes>
          <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.12</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <systemProperties>
            <property>
              <name>arquillian.launch</name>
              <value>${arquillian.launch}</value>
            </property>
            <property>
              <name>java.naming.factory.initial</name>
              <name>${initial.context.factory}</name>
            </property>
          </systemProperties>
          <includes>
            <include>**/*IntegrationTest.java</include>
          </includes>
          <argLine>-Xmx1024m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <profiles>

    <!-- testing with jboss AS 7 -->
    <profile>
      <id>arquillian-jboss7-managed</id>
      <properties>
        <arquillian.launch>jboss</arquillian.launch>
        <jboss.version>7.1.3.Final</jboss.version>
        <initial.context.factory>org.jboss.naming.remote.client.InitialContextFactory</initial.context.factory>
        <context.provider.url>remote://localhost:4447</context.provider.url>
      </properties>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <testResources>
          <testResource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
          </testResource>
          <testResource>
            <directory>src/test/resources-jbossas-7</directory>
            <filtering>false</filtering>
          </testResource>
        </testResources>
        <plugins>
          <!-- install server in the build/target dir -->
          <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.6</version>
            <executions>
              <execution>
                <id>copy-resources</id>
                <phase>process-test-resources</phase>
                <goals>
                  <goal>copy-resources</goal>
                </goals>
                <configuration>
                  <outputDirectory>${project.build.directory}/jboss-as-${jboss.version}/standalone/configuration</outputDirectory>
                  <resources>
                    <resource>
                      <directory>src/test/resources-jbossas-7</directory>
                      <filtering>false</filtering>
                    </resource>
                  </resources>
                  <overwrite>true</overwrite>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- install files with user/password information in the server dir -->
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
                <id>unpack</id>
                <phase>generate-test-resources</phase>
                <goals>
                  <goal>unpack</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.jboss.as</groupId>
                      <artifactId>jboss-as-dist</artifactId>
                      <version>${jboss.version}</version>
                      <type>zip</type>
                      <overWrite>false</overWrite>
                      <outputDirectory>${project.build.directory}</outputDirectory>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>

      <dependencies>
        <!-- logging -->
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.7.3</version>
        </dependency>

        <!-- test -->
        <dependency>
          <groupId>org.jboss.as</groupId>
          <artifactId>jboss-as-arquillian-container-managed</artifactId>
          <version>${jboss.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.jboss</groupId>
          <artifactId>jboss-remote-naming</artifactId>
          <version>1.0.4.Final</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.jboss.as</groupId>
          <artifactId>jboss-as-jms-client-bom</artifactId>
          <version>${jboss.version}</version>
          <type>pom</type>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>

    <!-- testing with glassfish -->
    <profile>
      <id>arquillian-glassfish-embedded</id>
      <properties>
        <arquillian.launch>glassfish-embedded</arquillian.launch>
        <initial.context.factory>com.sun.enterprise.naming.SerialInitContextFactory</initial.context.factory>
        <context.provider.url>iiop://localhost:3700</context.provider.url>
      </properties>
      <build>
        <testResources>
          <testResource>
            <directory>src/test/resources</directory>
            <filtering>true</filtering>
          </testResource>
          <testResource>
            <directory>src/test/resources-glassfish</directory>
            <filtering>false</filtering>
          </testResource>
        </testResources>
      </build>
      <dependencies>
        <dependency>
          <groupId>org.jboss.arquillian.container</groupId>
          <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
          <version>1.0.0.CR3</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.glassfish.main.extras</groupId>
          <artifactId>glassfish-embedded-all</artifactId>
          <version>3.1.2</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.5.8</version>
        </dependency>
      </dependencies>
    </profile>



  </profiles>

</project>

